--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm install; npm install --prefix ./thesis-app; node index.js"
+    "start": "npm install; node index.js"
   },
   "author": "",
   "license": "ISC",
