--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.3",
     "express": "^4.15.3",
+    "multer": "^1.3.0",
     "mysql": "^2.13.0",
     "stripe": "^4.22.0"
   }
