Added ng build to package.json for deployment purpose

--- a/thesis-app/package.json
+++ b/thesis-app/package.json
@@ -8,7 +8,8 @@
     "build": "ng build --watch",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
@@ -42,6 +43,8 @@
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "typescript": "~2.2.0",
+    "@angular/compiler-cli": "2.2.3",
+    "angular-cli": "1.0.0-beta.22-1"
   }
 }
