--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm install; npm install --prefix ./thesis-app; node index.js",
-    "postinstall": "ng build --aot -prod"
+    "start": "npm install; npm install --prefix ./thesis-app; node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,8 +15,6 @@
     "express": "^4.15.3",
     "multer": "^1.3.0",
     "mysql": "^2.13.0",
-    "stripe": "^4.22.0",
-    "@angular/compiler-cli": "2.2.3",
-    "angular-cli": "1.0.0-beta.22-1",
+    "stripe": "^4.22.0"
   }
 }
