--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.15.3",
     "multer": "^1.3.0",
     "mysql": "^2.13.0",
-    "stripe": "^4.22.0"
+    "stripe": "^4.22.0",
+    "webpack": "^2.6.1"
   }
 }
