--- a/thesis-app/package.json
+++ b/thesis-app/package.json
@@ -9,13 +9,14 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot -prod"
-
+    "postinstall": "ng build"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "^1.1.1",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.1.3",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
@@ -25,6 +26,7 @@
     "angular2-google-maps": "^0.17.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
+    "webpack": "^2.6.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
