--- a/thesis-app/package.json
+++ b/thesis-app/package.json
@@ -15,12 +15,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "cors": "^2.8.3",
-    "express": "^4.15.3",
-    "multer": "^1.3.0",
-    "mysql": "^2.13.0",
-    "stripe": "^4.22.0",
     "@angular/animations": "^4.0.0",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
@@ -30,8 +24,15 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "body-parser": "^1.17.2",
+    "buildpack": "0.0.0",
     "core-js": "^2.4.1",
+    "cors": "^2.8.3",
+    "express": "^4.15.3",
+    "multer": "^1.3.0",
+    "mysql": "^2.13.0",
     "rxjs": "^5.1.0",
+    "stripe": "^4.22.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
