--- a/thesis-app/package.json
+++ b/thesis-app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "thesis-app",
   "version": "0.0.0",
+  "description": "",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -12,6 +13,9 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/core": "4.2.2",
+    "@angular/compiler": "4.2.2",
+    "@angular/cli": "1.0.6",
     "@angular/common": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
@@ -21,11 +25,9 @@
     "angular2-google-maps": "^0.17.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
-    "webpack": "^2.6.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-
     "@angular/cli": "1.0.6",
     "@angular/compiler-cli": "^4.0.0",
     "@types/googlemaps": "^3.26.13",
